# codetracer-elixir-recorder

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  flake.nix  mix.exs
.github/: sibling-pins.json
.github/workflows/: ci.yml
benches/: native_tracer_baseline.md
docs/: README.md  cli.md  ctfs-output.md  known-limitations.md  manifest-schema.md  mix-integration.md  module-filters.md  rebar3-integration.md  source-maps.md
lib/codetracer_beam_recorder/: elixir_source_map.ex  runtime_bootstrap.ex
lib/codetracer_elixir_recorder/: elixir_source_map.ex  runtime_bootstrap.ex
rebar3_codetracer/: rebar.config
rebar3_codetracer/src/: codetracer_parse_transform.erl  rebar3_codetracer.app.src  rebar3_codetracer.erl  rebar3_codetracer_prv.erl
scripts/: prepare-beam-fixtures.sh  prepare-elixir-fixture.sh  release-check.sh
src/: main.rs
tests/: cli_test.rs  verify-beam-fixture-generation-no-silent-skip.sh  verify-elixir-fixture-generation-no-silent-skip.sh  verify-function-trace-test-no-silent-skip.sh  verify-golden-contract.sh  verify-manifest-source-location-test-no-silent-skip.sh  verify-message-trace-test-no-silent-skip.sh  verify-native-tracer-bench-test-no-silent-skip.sh  verify-native-tracer-ordering-test-no-silent-skip.sh  verify-native-tracer-overflow-test-no-silent-skip.sh  verify-native-tracer-parity-test-no-silent-skip.sh  verify-otp-fixture-matrix-test-no-silent-skip.sh  verify-plug-smoke-test-no-silent-skip.sh  verify-release-check-no-silent-skip.sh  verify-repo-requirements.sh  verify-runtime-session-test-no-silent-skip.sh  verify-step-instrumentation-test-no-silent-skip.sh  verify-stress-event-volume-test-no-silent-skip.sh  verify-trace-format-dependency.sh
tests/fixtures/: run-elixir-canonical-flow.sh  run-erlang-canonical-flow.sh
(+109 files in other folders)
