[package]
name = "codetracer-elixir-recorder"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/metacraft-labs/codetracer-elixir-recorder"
description = "CodeTracer Elixir and Erlang materialized trace recorder"

[dependencies]
codetracer_trace_reader = { path = "../codetracer-trace-format/codetracer_trace_reader" }
codetracer_trace_types = { path = "../codetracer-trace-format/codetracer_trace_types" }
codetracer_trace_writer = { path = "../codetracer-trace-format/codetracer_trace_writer" }
codetracer_trace_writer_nim = { path = "../codetracer-trace-format/codetracer_trace_writer_nim" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
