[package]
name = "codetracer-beam-recorder"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/metacraft-labs/codetracer-beam-recorder"
description = "CodeTracer BEAM materialized trace recorder (Erlang and Elixir)"

[dependencies]
codetracer_ctfs = { path = "../codetracer-trace-format/codetracer_ctfs" }
codetracer_trace_format_cbor_zstd = { path = "../codetracer-trace-format/codetracer_trace_format_cbor_zstd" }
codetracer_trace_reader = { path = "../codetracer-trace-format/codetracer_trace_reader" }
codetracer_trace_types = { path = "../codetracer-trace-format/codetracer_trace_types" }
codetracer_trace_writer = { path = "../codetracer-trace-format/codetracer_trace_writer" }
codetracer_trace_writer_nim = { path = "../codetracer-trace-format/codetracer_trace_writer_nim" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
cbor4ii = { version = "1.0.0", features = ["serde1", "use_std"] }
